--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -6,13 +6,13 @@
 
     h1 {
         font-family: Arial, Helvetica, sans-serif;
-        color: tomato;
+        color: DarkSlateGray;
         padding: 2px;
         margin: 20px;
     }
 
     h4, p {
-        color: ghostwhite;
+        color: DarkGrey;
         font-family: Arial, Helvetica, sans-serif;
     }
 
@@ -22,7 +22,7 @@
     }
 
     header {
-        background-color: lightseagreen;
+        background-color: DarkTurquoise;
         overflow: hidden;
         font-size: large;
         border-radius: 2px;
@@ -46,7 +46,7 @@
 
     body,html {
         height: 100%;
-        background-image: url("images/Shark_Silhouette.jpg");
+        background-image: 
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
