--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> Shark Spotter </title>
+    <head>
+        <!-- Title of tab-->    
+        <title> Shark Spotter </title>
+        <style type="text/css">
+        
+        
+        </style>
 </head>
 <body>
+    <header>
+        <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
+    </header>
 </body>
 </html>
