--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -9,8 +9,7 @@
         </style>
 </head>
 <body>
-    <header>
-        <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
-    </header>
+    <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
 </body>
 </html>
