--- a/helloWorld.html
+++ b/helloWorld.html
@@ -27,7 +27,7 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 37.552234, lng: 126.988918 },
+          center: { lat: 37.460361105500716, lng: 126.44065278277655 },
           zoom: 15,
         });
       }
