--- a/helloWorld.html
+++ b/helloWorld.html
@@ -11,7 +11,7 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 100%;
+        height: 90%;
       }
 
       /* Optional: Makes the sample page fill the window. */
@@ -35,5 +35,10 @@
   </head>
   <body>
     <div id="map"></div>
+    <div class= "content">
+      <h1> Incheon International Airport</h1>
+      <p> Largest airport in South Korea, the primary airport serving the Seoul Capital Area. 
+        It has been rated as the world's fourth best and one of the cleanest airports by Skytrax.</p>
+    </div>
   </body>
 </html>
