--- a/helloWorld.html
+++ b/helloWorld.html
@@ -21,21 +21,26 @@
         margin: 0;
         padding: 0;
       }
+      .description {
+        margin: 20px;
+        padding: 10px;
+
+      }
     </style>
     <script>
       let map;
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 37.460361105500716, lng: 126.44065278277655 },
-          zoom: 10,
+          center: { lat: 7.466237124029306, lng: 126.44030946191648 },
+          zoom: 12,
         });
       }
     </script>
   </head>
   <body>
     <div id="map"></div>
-    <div class= "content">
+    <div class= "description">
       <h1> Incheon International Airport</h1>
       <p> Largest airport in South Korea, the primary airport serving the Seoul Capital Area. 
         It has been rated as the world's fourth best and one of the cleanest airports by Skytrax.</p>
