--- a/helloWorld.html
+++ b/helloWorld.html
@@ -42,6 +42,7 @@
     <div id="map"></div>
     <div class= "description">
       <h1> Incheon International Airport</h1>
+      <h2> Welcome to South Korea! </h2>
       <p> Largest airport in South Korea, the primary airport serving the Seoul Capital Area. 
         It has been rated as the world's fourth best and one of the cleanest airports by Skytrax.</p>
     </div>
