--- a/helloWorld.html
+++ b/helloWorld.html
@@ -10,6 +10,7 @@
     <style type="text/css">
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
+       /*Must! to show the map*/
       #map {
         height: 90%;
       }
