--- a/Gmaps/tutorial1.html
+++ b/Gmaps/tutorial1.html
@@ -9,7 +9,7 @@
     <style type="text/css">
       /* Set the size of the div element that contains the map */
       #map {
-        height: 100%;
+        height: 400;
         /* The height is 400 pixels */
         width: 100%;
         /* The width is the width of the web page */
