--- a/Gmaps/tutorial2.html
+++ b/Gmaps/tutorial2.html
@@ -44,8 +44,7 @@
     });
     // Add a marker clusterer to manage the markers.
     new MarkerClusterer(map, markers, {
-      imagePath:
-        "https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m",
+      imagePath: './images/m'
     });
   }
   const locations = [
