--- a/Gmaps/tutorial2.html
+++ b/Gmaps/tutorial2.html
@@ -42,7 +42,8 @@
           });
         });
         // Add a marker clusterer to manage the markers.
-        new MarkerClusterer(map, markers, {
+
+        var markercluster = new MarkerClusterer(map, markers, {
           imagePath: './images/m'
             
         });
