--- a/Gmaps/tutorial2.html
+++ b/Gmaps/tutorial2.html
@@ -43,10 +43,8 @@
         });
         // Add a marker clusterer to manage the markers.
 
-        var markercluster = new MarkerClusterer(map, markers, {
-          imagePath: '../images/m'
-            
-        });
+        var markercluster = new MarkerClusterer(map, markers, 
+            {imagePath: '../images/m'});
       }
       const locations = [
       { lat: 49.758123, lng: -92.65349 },
