--- a/Gmaps/tutorial3a.html
+++ b/Gmaps/tutorial3a.html
@@ -23,6 +23,12 @@
       }
     </style>
     <script>
+        // Create a script tag and set the USGS URL as the source.
+        var script = document.createElement('script');
+
+        script.src = 'http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp';
+        document.getElementsByTagName('head')[0].appendChild(script);
+        
       let map;
 
       function initMap() {
