--- a/option1.html
+++ b/option1.html
@@ -13,7 +13,10 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
        #map {
-        height: 100%;
+        height: 60%;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
       }
       html,
       body {
