--- a/option1.html
+++ b/option1.html
@@ -44,11 +44,11 @@
       ];
       
         for(i = 0; i < markers.length; i++) {
-                var position = new google.maps.LatLng(markers[i][1], markers[i][2]);
+                var position = new google.maps.LatLng(locations[i][1], locations[i][2]);
                     marker = new google.maps.Marker({
                         position: position,
                         map: map,
-                        title: markers[i][0],
+                        title: locations[i][0],
                         icon: 'cameramarker.png'
                 });
                 
