--- a/option1.html
+++ b/option1.html
@@ -43,7 +43,7 @@
 
       ];
       
-        for(i = 0; i < markers.length; i++) {
+        for(i = 0; i < locations.length; i++) {
                 var position = new google.maps.LatLng(locations[i][1], locations[i][2]);
                     marker = new google.maps.Marker({
                         position: position,
