--- a/option1.html
+++ b/option1.html
@@ -42,11 +42,11 @@
             ['Zračna luka Franjo Tuđman Zagreb', 45.86108514285162,  16.106946362301937]
 
       ];
-      
+      const image = "images/cameramarker.png"
       for (i = 0; i < locations.length; i++) {
           const marker = new google.maps.Marker({
             position: {lat: locations[i][2], lng: locations[i][3]},
-            icon: 'cameramarker.png',
+            icon: image,
             map: mapVar,
             title: locations[i][0],
           });
