--- a/option1.html
+++ b/option1.html
@@ -27,7 +27,7 @@
       // Initialize and add the map
       function initMap() {
         // The map, centered at 48.93419765201533, 8.689967642556423
-        var map = new google.maps.Map(document.getElementById("map"), {
+        const map = new google.maps.Map(document.getElementById("map"), {
           zoom: 5,
           center: { lat: 48.93419765201533, lng: 8.689967642556423 },
           mapTypeId: 'hybrid',
@@ -43,7 +43,7 @@
 
       ];
       const image = "images/cameramarker.png";
-      
+
       for (i = 0; i < locations.length; i++) {
           const marker = new google.maps.Marker({
             position: {lat: locations[i][2], lng: locations[i][3]},
@@ -58,7 +58,7 @@
           });
         };
       }
-        </script>
+    </script>
   </head>
   <body>
     <header>
