--- a/option1.html
+++ b/option1.html
@@ -27,7 +27,7 @@
       // Initialize and add the map
       function initMap() {
         // The map, centered at 48.93419765201533, 8.689967642556423
-        const map = new google.maps.Map(document.getElementById("map"), {
+        var map = new google.maps.Map(document.getElementById("map"), {
           zoom: 5,
           center: { lat: 48.93419765201533, lng: 8.689967642556423 },
           mapTypeId: 'hybrid',
@@ -42,15 +42,17 @@
             ['Zračna luka Franjo Tuđman Zagreb', 45.86108514285162,  16.106946362301937]
 
       ];
-      const image = "images/cameramarker.png";
+        const image = "images/cameramarker.png";
 
-      for (i = 0; i < locations.length; i++) {
+       
+        for (i = 0; i < locations.length; i++) {
           const marker = new google.maps.Marker({
             position: {lat: locations[i][1], lng: locations[i][2]},
             icon: image,
             map: mapVar,
             title: locations[i][0],
           });
+
 
           // to open infowindow when markers are clicked
           marker.addListener("click", () => {
