--- a/option1.html
+++ b/option1.html
@@ -12,7 +12,7 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
        #map {
-        height: 60%;
+        height: 80%;
         width: 80%;
         margin-left: auto;
         margin-right: auto;
@@ -22,6 +22,17 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        background-color: #FFEBCD;
+      }
+      h1 {
+        text-align: center;
+        font-size: 35px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      }
+      p {
+        text-align: center;
+        font-size: 15px;
+        font-family:'Courier New', Courier, monospace;
       }
     </style>
     <script>          
@@ -66,11 +77,10 @@
     </script>
   </head>
   <body>
-    <header>
-        <h1> Trips in Europe </h1>
-       
-    </header>   
+    <h1> Trips in Europe </h1>  
+    <p> Hate this class so much</p>
     <div id="map"></div>
+
     
   </body>
 </html>
