--- a/option1.html
+++ b/option1.html
@@ -54,7 +54,7 @@
             ['Zračna luka Franjo Tuđman Zagreb', 45.86108514285162,  16.106946362301937]
 
       ];
-        const flightPlanCoordinates = [
+        var flightPlanCoordinates = [
             { lat: 49.910070103910016, lng: -97.23658901693946 },
             { lat: 51.58554878466345, lng: -0.4891439261136681 },
             { lat: 49.01356786412916, lng: 2.5494083302265484 },
@@ -62,6 +62,7 @@
             { lat: 41.80224031243568, lng:  12.246155315152533 },
             { lat: 45.86108514285162, lng:  16.106946362301937 },
         ];
+
         const flightPath = new google.maps.Polyline({
             path: flightPlanCoordinates,
             geodesic: true,
@@ -77,7 +78,7 @@
           ],
         });
         
-        flightPath.setMap(map);
+        flightPath.setMap(mapVar);
     
 
 
