--- a/option1.html
+++ b/option1.html
@@ -54,7 +54,7 @@
             ['Zračna luka Franjo Tuđman Zagreb', 45.86108514285162,  16.106946362301937]
 
       ];
-        var latlng = [
+        var flightPlanCoordinates = [
             { lat: 49.910070103910016, lng: -97.23658901693946 },
             { lat: 51.58554878466345, lng: -0.4891439261136681 },
             { lat: 49.01356786412916, lng: 2.5494083302265484 },
@@ -63,22 +63,15 @@
             { lat: 45.86108514285162, lng:  16.106946362301937 },
         ];
 
-        const path  = new google.maps.Polyline({
-            path: latlng,
+        const flightPath  = new google.maps.Polyline({
+            path: flightPlanCoordinates,
             geodesic: true,
             strokeColor: "#FF0000",
-            strokeOpacity: 0,
-            strokeWeight: 0,
-            icons: [
-            {
-              icon: lineSymbol,
-              offset: 0,
-              repeat: "20px",
-            },
-          ],
+            strokeOpacity: 1.0,
+            strokeWeight: 2,
         });
         
-        path.setMap(mapVar);
+        flightPath.setMap(mapVar);
 
         const infoWindow = new google.maps.InfoWindow();
 
