--- a/option1.html
+++ b/option1.html
@@ -60,7 +60,10 @@
             { lat: 41.80224031243568, lng:  12.246155315152533 },
             { lat: 45.86108514285162, lng:  16.106946362301937 },
         ];
+        var description = [
+            ['<img src = "images/london.jpg">'+ '<h5> London, England </h5>']
 
+        ];
 
 
         const flightPath  = new google.maps.Polyline({
