--- a/option1.html
+++ b/option1.html
@@ -38,10 +38,10 @@
     <script>          
       // Initialize and add the map
       function initMap() {
-        // The map, centered at 48.93419765201533, 8.689967642556423
+        // The map, centered at 
         const mapVar = new google.maps.Map(document.getElementById("map"), {
           zoom: 6,
-          center: { lat: 48.93419765201533, lng: 8.689967642556423 },
+          center: { lat: 47.774721974808706, lng: 5.365266727184624 },
           mapTypeId: 'hybrid',
         });
 
