--- a/option1.html
+++ b/option1.html
@@ -86,16 +86,16 @@
             title: locations[i][0],
           });
 
-          const infoWindow = new google.maps.InfoWindow(), marker, i;
+          //const infoWindow = new google.maps.InfoWindow(), marker, i;
 
-          marker.addListener('click', (function(marker, i) {
-                    return function() {
-                        infoWindow.setContent(description[i][0]);
-                        infoWindow.open(map, marker);
+          //marker.addListener('click', (function(marker, i) {
+                    //return function() {
+                        //infoWindow.setContent(description[i][0]);
+                        //infoWindow.open(map, marker);
                     }
-                })(marker, i));
+                //})(marker, i));
             }
-        }    
+            
     </script>
   </head>
   <body>
