--- a/option1.html
+++ b/option1.html
@@ -46,11 +46,11 @@
         });
 
         var locations = [
-            ['Heathrow Airport', 51.58554878466345, -0.4891439261136681], 
-            ['Aéroport de Paris-Charles de Gaulle', 49.01356786412916, 2.5494083302265484],
-            ['Flughafen Zürich', 47.46130046195648,  8.553433225327248],
-            ['Aeroporto internazionale Leonardo da Vinc', 41.80224031243568, 12.246155315152533],
-            ['Zračna luka Franjo Tuđman Zagreb', 45.86108514285162,  16.106946362301937]
+            ['London, England', 51.58554878466345, -0.4891439261136681], 
+            ['Paris, France', 49.01356786412916, 2.5494083302265484],
+            ['Zurich, Switzerland', 47.46130046195648,  8.553433225327248],
+            ['Rome, Italy', 41.80224031243568, 12.246155315152533],
+            ['Zagreb, Croatia', 45.86108514285162,  16.106946362301937]
 
       ];
         var flightPlanCoordinates = [
