--- a/option1.html
+++ b/option1.html
@@ -99,9 +99,12 @@
     </script>
   </head>
   <body>
-    <h1> Trips in Europe </h1>  
-    <p> Hate this class so much</p>
+    <h1> Hyerin in Europe in 2016 </h1>  
+    <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
     <div id="map"></div>
+    <div class="entry1">
+        <figure><img src="images/london.jpg" alt="london" style="width:350px;height:350px;"></figure>
+    </div>
 
     
   </body>
