--- a/option1.html
+++ b/option1.html
@@ -27,13 +27,19 @@
       h1 {
         text-align: center;
         font-size: 35px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: 'Courier New', Courier, monospace;
       }
       h4 {
         text-align: center;
-        font-size: 15px;
+        font-size: 20px;
         font-family:'Courier New', Courier, monospace;
-      }
+    }
+    .column {
+        float: left;
+        width: 50%;
+        padding: 10px;
+        height: 300px; /* Should be removed. Only for demonstration */
+        }
     </style>
     <script>          
       // Initialize and add the map
@@ -102,6 +108,15 @@
     <h1> Hyerin in Europe in 2016 </h1>  
     <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
     <div id="map"></div>
+    <div class="row">
+        <div class="column" style="background-color:#aaa;">
+          <p><figure><img src="images/london.jpg" alt="london" style="width:350px;height:350px;"></figure></p>
+        </div>
+        <div class="column" style="background-color:#bbb;">
+          <h2>Column 2</h2>
+          <p>Some text..</p>
+        </div>
+      </div>
     <div class="entry1">
         <figure><img src="images/london.jpg" alt="london" style="width:350px;height:350px;"></figure>
     </div>
