--- a/option1.html
+++ b/option1.html
@@ -36,20 +36,18 @@
     }
       .column {
 	    float: left;
-	    width: 25%;
 	    padding: 10px;
-	    background-color: #DCDCDC;
 	    text-align: center;
-	    Height: 240px;
+	    height: 240px;
 }
 
       .column2 {
 	    background-color: #1a1a1a;
-	    width: 75%;
+        float: right;
 	    padding: 10px;
 	    text-align: center;
 	    height: 240px;
-	    color: white;	
+	    ;	
 }
     .footer {
         background-color: slategray;
@@ -128,17 +126,16 @@
     <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
     <div id="map"></div>
     <div class="row">
-        <div class="column" style="background-color:#bbb;">
+        <div class="column;">
             <h2> London, England </h2>
             <p><figure><img src="images/london.jpg" alt="london" style="width:350px;height:350px;"></figure></p>
         </div>
-        <div class="column2" style="background-color:#bbb;">
+        <div class="column2";>
           <h2>Paris, France </h2>
           <p>Some text..</p>
         </div> 
         <div class="footer">
-            <p>Hyerin Mun. This site was made with reference to <a class="footerlink" href="https://www.w3schools.com/">W3 Schools</a> and
-            John duckett's book <a class="footerlink" href="https://www.wiley.com/en-ca/HTML+and+CSS%3A+Design+and+Build+Websites-p-9781118008188"> HTML & CSS </a></p>
-          </div>      
+            <p> Photo Credit and Website by Hyerin Mun.</p>
+        </div>      
   </body>
 </html>
