--- a/option1.html
+++ b/option1.html
@@ -36,18 +36,18 @@
     }
       .column {
 	    float: left;
+        width: 50%;
 	    padding: 10px;
 	    text-align: center;
 	    height: 240px;
 }
 
       .column2 {
-	    background-color: #1a1a1a;
         float: right;
+        width: 50%;
 	    padding: 10px;
 	    text-align: center;
-	    height: 240px;
-	    ;	
+	    height: 240px;	
 }
     .footer {
         background-color: slategray;
