--- a/option1.html
+++ b/option1.html
@@ -35,6 +35,7 @@
         font-family:'Courier New', Courier, monospace;
     }
       .column {
+        float: left;
         width: 50%;
 	    padding: 10px;
 	    text-align: center;
