--- a/option1.html
+++ b/option1.html
@@ -37,14 +37,13 @@
       .column {
         float: left;
         width: 50%;
-	    padding: 10px;
+	    margin: 25%;
 	    text-align: center;
 	    height: 240px;
 }
 
       .column2 {
         width: 50%;
-	    padding: 10px;
 	    text-align: center;
 	    height: 240px;	
 }
