--- a/option1.html
+++ b/option1.html
@@ -34,18 +34,27 @@
         font-size: 20px;
         font-family:'Courier New', Courier, monospace;
     }
-      .column {
-        float: left;
-        width: 50%;
-	    margin: 25%;
-	    text-align: center;
-	    height: 240px;
+      .row{
+        position: relative;
+        width: 100%;
+        right: 50%;
+        background-color: #f4f4f4
 }
-
-      .column2 {
-        width: 50%;
-	    text-align: center;
-	    height: 240px;	
+      .col1{
+        position: relative;
+        overflow: hidden;
+        float: left;
+        width: 48%;
+        left: 101%;
+        background-color: #e6e6e6
+}
+      .col2{
+        position: relative;
+        overflow: hidden;
+        float: left;
+        width: 48%;
+        left: 3%;
+        background-color: #e6e6e6
 }
     .footer {
         background-color: slategray;
@@ -124,11 +133,11 @@
     <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
     <div id="map"></div>
     <div class="row">
-        <div class="column;">
+        <div class="col1;">
             <h2> London, England </h2>
             <p><figure><img src="images/london.jpg" alt="london" style="width:350px;height:350px;"></figure></p>
         </div>
-        <div class="column2";>
+        <div class="col2";>
           <h2>Paris, France </h2>
           <p>Some text..</p>
         </div> 
