--- a/option1.html
+++ b/option1.html
@@ -133,11 +133,11 @@
     <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
     <div id="map"></div>
     <div class="row">
-        <div class="col1;">
+        <div class="col1">
             <h2> London, England </h2>
             <p><figure><img src="images/london.jpg" alt="london" style="width:350px;height:350px;"></figure></p>
         </div>
-        <div class="col2";>
+        <div class="col2">
           <h2>Paris, France </h2>
           <p>Some text..</p>
         </div> 
