--- a/option1.html
+++ b/option1.html
@@ -27,35 +27,40 @@
       h1 {
         text-align: center;
         font-size: 35px;
-        font-family: 'Courier New', Courier, monospace;
+        font-family: Georgia, 'Times New Roman', Times, serif;
       }
       h4 {
         text-align: center;
         font-size: 20px;
         font-family:'Courier New', Courier, monospace;
     }
-      .row{
-        position: relative;
-        width: 100%;
-        right: 50%;
-        background-color: #f4f4f4
-}
-      .col1{
-        position: relative;
-        overflow: hidden;
-        float: left;
-        width: 48%;
-        left: 101%;
-        background-color: #e6e6e6
-}
-      .col2{
-        position: relative;
-        overflow: hidden;
-        float: left;
-        width: 48%;
-        left: 3%;
-        background-color: #e6e6e6
-}
+      .wrapper{
+          width: 720px;
+          margin: 0px auto;
+      }
+      .entry{
+          width: 220px;
+          float:left;
+          margin:10px;
+          height: 198px;
+      }
+      figure{
+          display: block;
+          width: 202px;
+          height: 170px;
+          margin:0px;
+          padding: 0px;
+          text-align: left;
+      }
+      figure img{
+          width: 200px;
+          height: 150px;
+          border: 1px soild burlywood;
+      }
+      figcaption{
+          padding-left: 20px;
+      }
+      
     .footer {
         background-color: slategray;
         text-align: center;
@@ -132,12 +137,32 @@
     <h1> Hyerin in Europe in 2016 </h1>  
     <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
     <div id="map"></div>
-    <div class="row">
-        <div class="col1">
-            <h2> London, England </h2>
-            <p><figure><img src="images/london.jpg" alt="london" style="width:350px;height:350px;"></figure></p>
-        </div>
-        <div class="col2">
+
+    <div class="wrapper">
+      <div class = "entry">
+        <figure><img src="images/london.jpg" alt="london" />
+              <figcaption> London, England </figcaption>
+        </figure>
+      </div>
+      <div class = "entry">
+        <figure><img src="images/london.jpg" alt="london" />
+              <figcaption> London, England </figcaption>
+        </figure>
+      </div>      <div class = "entry">
+        <figure><img src="images/london.jpg" alt="london" />
+              <figcaption> London, England </figcaption>
+        </figure>
+      </div>      <div class = "entry">
+        <figure><img src="images/london.jpg" alt="london" />
+              <figcaption> London, England </figcaption>
+        </figure>
+      </div>      <div class = "entry">
+        <figure><img src="images/london.jpg" alt="london" />
+              <figcaption> London, England </figcaption>
+        </figure>
+      </div>
+    </div>  
+        <div class="column2">
           <h2>Paris, France </h2>
           <p>Some text..</p>
         </div> 
