--- a/option1.html
+++ b/option1.html
@@ -39,7 +39,7 @@
           margin: 0px auto;
       }
       .entry{
-          width: 300px;
+          width: 220px;
           float:left;
           margin:10px;
           height: 198px;
@@ -53,7 +53,7 @@
           text-align: left;
       }
       figure img{
-          width: 300px;
+          width: 200px;
           height: 150px;
           border: 1px soild burlywood;
       }
@@ -62,7 +62,7 @@
       }
       
     .footer {
-        background-color: slategray;
+        background-color: burlywood;
         text-align: center;
         padding: 2px;
         color:white;
