--- a/option1.html
+++ b/option1.html
@@ -163,8 +163,8 @@
       </div>
     </div>  
 
-    <div class="footer">
-        <p> Photo Credit and Website by Hyerin Mun.</p>
-    </div>      
+    <footer>
+        <h6></h6> Photo Credit and Website by Hyerin Mun.</h6>
+    </footer>     
   </body>
 </html>
