--- a/option1.html
+++ b/option1.html
@@ -164,7 +164,7 @@
     </div>  
 
     <footer>
-        <h6></h6> Photo Credit and Website by Hyerin Mun.</h6>
+        <h6>Photo Credit and Website by Hyerin Mun.</h6>
     </footer>     
   </body>
 </html>
