--- a/option1.html
+++ b/option1.html
@@ -37,6 +37,7 @@
       .wrapper{
           width: 720px;
           margin: 0px auto;
+          padding-bottom:100px;/* footer height */
       }
       .entry{
           width: 220px;
