--- a/option1.html
+++ b/option1.html
@@ -62,14 +62,15 @@
           padding-left: 20px;
       }
       
-    .footer {
-        background-color: burlywood;
+      .footer {
+        width:100%;
+        height:100px;
+        position:absolute;
+        bottom:0;
+        background:#5eaeff;
         text-align: center;
-        padding: 2px;
-        color:white;
-        opacity: 0.4;
-        font-size: 14px;
-        }    
+        color: white;
+      }   
     </style>
     <script>          
       // Initialize and add the map
