--- a/option1.html
+++ b/option1.html
@@ -37,7 +37,6 @@
       .wrapper{
           width: 720px;
           margin: 0px auto;
-          padding-bottom:100px;/* footer height */
       }
       .entry{
           width: 220px;
@@ -63,14 +62,10 @@
       }
       
       .footer {
-        width:100%;
-        height:100px;
-        position:absolute;
-        bottom:0;
-        background:#5eaeff;
-        text-align: center;
-        color: white;
-      }   
+        height: 70px;
+        background-color: burlywood;
+      }
+   
     </style>
     <script>          
       // Initialize and add the map
@@ -86,7 +81,7 @@
             ['London, England', 51.58554878466345, -0.4891439261136681], 
             ['Paris, France', 49.01356786412916, 2.5494083302265484],
             ['Zurich, Switzerland', 47.46130046195648,  8.553433225327248],
-            ['Rome, Italy', 41.80224031243568, 12.246155315152533],
+            ['Venice, Italy', 41.80224031243568, 12.246155315152533],
             ['Zagreb, Croatia', 45.86108514285162,  16.106946362301937]
 
       ];
@@ -147,20 +142,20 @@
         </figure>
       </div>
       <div class = "entry">
-        <figure><img src="images/london.jpg" alt="london" />
-              <figcaption> London, England </figcaption>
+        <figure><img src="images/paris.jpg" alt="paris" />
+              <figcaption> Paris, France </figcaption>
         </figure>
       </div>      <div class = "entry">
-        <figure><img src="images/london.jpg" alt="london" />
-              <figcaption> London, England </figcaption>
+        <figure><img src="images/swizerland.jpg" alt="swizerland" />
+              <figcaption> Zurich, Swizerland </figcaption>
         </figure>
       </div>      <div class = "entry">
-        <figure><img src="images/london.jpg" alt="london" />
-              <figcaption> London, England </figcaption>
+        <figure><img src="images/italy.jpg" alt="italy" />
+              <figcaption> Venice, Italy </figcaption>
         </figure>
       </div>      <div class = "entry">
-        <figure><img src="images/london.jpg" alt="london" />
-              <figcaption> London, England </figcaption>
+        <figure><img src="images/croatia.jpg" alt="croatia" />
+              <figcaption> Zagreb, Croatia </figcaption>
         </figure>
       </div>
     </div>  
