--- a/option1.html
+++ b/option1.html
@@ -92,12 +92,6 @@
             { lat: 41.80224031243568, lng:  12.246155315152533 },
             { lat: 45.86108514285162, lng:  16.106946362301937 },
         ];
-        var infoWindowContent = [
-            ['<img src = "images/london.jpg">'+ '<h5> London, England </h5>']
-
-        ];
-
-
         const flightPath  = new google.maps.Polyline({
             path: flightPlanCoordinates,
             geodesic: true,
@@ -146,8 +140,8 @@
               <figcaption> Paris, France </figcaption>
         </figure>
       </div>      <div class = "entry">
-        <figure><img src="images/swizerland.jpg" alt="swizerland" />
-              <figcaption> Zurich, Swizerland </figcaption>
+        <figure><img src="images/switzerland.jpg" alt="swizerland" />
+              <figcaption> Zurich, Switzerland </figcaption>
         </figure>
       </div>      <div class = "entry">
         <figure><img src="images/italy.jpg" alt="italy" />
