--- a/option1.html
+++ b/option1.html
@@ -35,7 +35,7 @@
         font-family:'Courier New', Courier, monospace;
     }
       .wrapper{
-          width: 720px;
+          width: 90%;
           margin: 0px auto;
       }
       .entry{
@@ -46,7 +46,7 @@
       }
       figure{
           display: block;
-          width: 202px;
+          width: 30%;
           height: 170px;
           margin:0px;
           padding: 0px;
