--- a/option1.html
+++ b/option1.html
@@ -35,7 +35,7 @@
         font-family:'Courier New', Courier, monospace;
     }
       .wrapper{
-          width: 90%;
+          width: 80%;
           margin: 0px auto;
       }
       .entry{
@@ -46,9 +46,10 @@
       }
       figure{
           display: block;
-          width: 20%;
+          width: 25%;
+          float:left;
           height: 170px;
-          margin:0px;
+          margin:10px;
           padding: 0px;
           text-align: left;
       }
