--- a/option1.html
+++ b/option1.html
@@ -35,7 +35,7 @@
         font-family:'Courier New', Courier, monospace;
     }
       .wrapper{
-          width: 80%;
+          width: 90%;
           margin: 0px auto;
       }
       .entry{
@@ -46,8 +46,7 @@
       }
       figure{
           display: block;
-          width: 25%;
-          float:left;
+          width: 300px;
           height: 170px;
           margin:10px;
           padding: 0px;
