--- a/option1.html
+++ b/option1.html
@@ -35,7 +35,7 @@
         font-family:'Courier New', Courier, monospace;
     }
       .wrapper{
-          width: 75%;
+          width: 85%;
           margin: 0px auto;
       }
       .entry{
@@ -122,7 +122,7 @@
   <body>
     <h1> Hyerin in Europe in 2016 </h1>  
     <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
-    <h6> </h6>
+    <h6> The six markers are the places I've been when I traveled in Europe with my family.  </h6>
     <div id="map"></div>
 
     <div class="wrapper">
