--- a/option1.html
+++ b/option1.html
@@ -34,8 +34,13 @@
         font-size: 20px;
         font-family:'Courier New', Courier, monospace;
     }
+      h6 {
+        text-align: center;
+        font-size: 15px;
+        font-family:'Courier New', Courier, monospace;
+    }
       .wrapper{
-          width: 85%;
+          width: 80%;
           margin: 0px auto;
       }
       .entry{
@@ -128,7 +133,7 @@
     <div class="wrapper">
       <div class = "entry">
         <figure><img src="images/london.jpg" alt="london" />
-              <figcaption> London, England </figcaption>
+              <figcaption> London, England: Big ben! Probably the world's famous clock. Find more information on Big ben    </figcaption>
         </figure>
       </div>
       <div class = "entry">
