--- a/option1.html
+++ b/option1.html
@@ -40,7 +40,7 @@
         font-family:'Courier New', Courier, monospace;
     }
       .wrapper{
-          width: 80%;
+          width: 75%;
           margin: 0px auto;
       }
       .entry{
@@ -82,7 +82,8 @@
             ['Paris, France', 49.01356786412916, 2.5494083302265484],
             ['Zurich, Switzerland', 47.46130046195648,  8.553433225327248],
             ['Venice, Italy', 41.80224031243568, 12.246155315152533],
-            ['Zagreb, Croatia', 45.86108514285162,  16.106946362301937]
+            ['Zagreb, Croatia', 45.86108514285162,  16.106946362301937],
+            ['Praguem', 50.15706438441706, 14.26937191604716]
 
       ];
         var flightPlanCoordinates = [
@@ -91,6 +92,7 @@
             { lat: 47.46130046195648, lng:  8.553433225327248 },
             { lat: 41.80224031243568, lng:  12.246155315152533 },
             { lat: 45.86108514285162, lng:  16.106946362301937 },
+            { lat: 50.15706438441706, lng:  14.26937191604716 },
         ];
         const flightPath  = new google.maps.Polyline({
             path: flightPlanCoordinates,
@@ -113,7 +115,7 @@
           });
 
           const infowindow = new google.maps.InfoWindow({
-            content: `<h4>${locations[i][0]}</h4>`,
+            content: `<h6>${locations[i][0]}</h6>`,
           });
 
           // to open infowindow when markers are clicked
@@ -133,24 +135,28 @@
     <div class="wrapper">
       <div class = "entry">
         <figure><img src="images/london.jpg" alt="london" />
-              <figcaption> London, England: Big ben! Probably the world's famous clock. Find more information on Big ben    </figcaption>
+              <figcaption> London, England: Big ben </figcaption>
         </figure>
       </div>
       <div class = "entry">
         <figure><img src="images/paris.jpg" alt="paris" />
-              <figcaption> Paris, France </figcaption>
+              <figcaption> Paris, France: Eiffel Tower </figcaption>
         </figure>
       </div>      <div class = "entry">
         <figure><img src="images/switzerland.jpg" alt="swizerland" />
-              <figcaption> Zurich, Switzerland </figcaption>
+              <figcaption> Zurich, Switzerland: One of village in Zurich </figcaption>
         </figure>
       </div>      <div class = "entry">
         <figure><img src="images/italy.jpg" alt="italy" />
-              <figcaption> Venice, Italy </figcaption>
+              <figcaption> Venice, Italy: Venice canals  </figcaption>
         </figure>
       </div>      <div class = "entry">
         <figure><img src="images/croatia.jpg" alt="croatia" />
-              <figcaption> Zagreb, Croatia </figcaption>
+              <figcaption> Zagreb, Croatia: Beautiful Croatia </figcaption>
+        </figure>
+      </div>      <div class = "entry">
+        <figure><img src="images/prague.jpg" alt="prague" />
+              <figcaption> Prague, Czech Republic: Astronomical Clock Tower </figcaption>
         </figure>
       </div>
     </div>      
