--- a/option1.html
+++ b/option1.html
@@ -45,7 +45,7 @@
       }
       .entry{
           width: 400px;
-          float:left;
+          float:center;
           margin:10px;
           height: 300px;
       }
@@ -55,7 +55,7 @@
           height: 300px;
           margin:10px;
           padding: 0px;
-          text-align: left;
+          text-align: center;
       }
       figure img{
           width: 400px;
@@ -63,7 +63,7 @@
           border: 1px soild burlywood;
       }
       figcaption{
-          padding-left: 20px;
+          padding: center;
       }
    
     </style>
@@ -83,7 +83,7 @@
             ['Zurich, Switzerland', 47.46130046195648,  8.553433225327248],
             ['Venice, Italy', 41.80224031243568, 12.246155315152533],
             ['Zagreb, Croatia', 45.86108514285162,  16.106946362301937],
-            ['Praguem', 50.15706438441706, 14.26937191604716]
+            ['Prague, Czech Republic', 50.15706438441706, 14.26937191604716]
 
       ];
         var flightPlanCoordinates = [
