--- a/option1.html
+++ b/option1.html
@@ -45,7 +45,7 @@
       }
       .entry{
           width: 400px;
-          float:center;
+          float:left;
           margin:10px;
           height: 300px;
       }
@@ -55,7 +55,7 @@
           height: 300px;
           margin:10px;
           padding: 0px;
-          text-align: center;
+          text-align: left;
       }
       figure img{
           width: 400px;
@@ -63,7 +63,7 @@
           border: 1px soild burlywood;
       }
       figcaption{
-          padding: center;
+          padding-left: 20px;
       }
    
     </style>
