--- a/option1.html
+++ b/option1.html
@@ -26,8 +26,8 @@
       }
       h1 {
         text-align: center;
-        font-size: 35px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 40px;
+        font-family: 'Courier New', Courier, monospace;
       }
       h4 {
         text-align: center;
