--- a/option1.html
+++ b/option1.html
@@ -129,8 +129,8 @@
   <body>
     <h1> Hyerin in Europe in 2016 </h1>  
     <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
-    <h6> The six markers are the places I've been in Europe with my family. From London, France, Switzerland, Croatia, to Czechia! 
-      Also, you can see the pictures below that I took while I traveled! </h6>
+    <h6> The six markers are the places I've been in Europe with my family. From London, France, Switzerland, Italy, Croatia, to Czechia! 
+      <br> Also, you can see the pictures below that I took while I traveled! </h6>
     <div id="map"></div>
 
     <div class="wrapper">
