change font of figcaption

--- a/option1.html
+++ b/option1.html
@@ -64,6 +64,7 @@
       }
       figcaption{
           padding-left: 20px;
+          font-family:'Courier New', Courier, monospace
       }
    
     </style>
@@ -127,7 +128,7 @@
     </script>
   </head>
   <body>
-    <h1> Hyerin in Europe in 2016 </h1>  
+    <h1> HYERIN in EUROPE in 2016 </h1>  
     <h4> Follow me! I will show you the beautiful places I've been in Europe in 2016!</h4>
     <h6> The six markers are the places I've been in Europe with my family. From London, France, Switzerland, Italy, Croatia, to Czechia! 
       <br> Also, you can see the pictures below that I took while I traveled! </h6>
@@ -157,7 +158,7 @@
         </figure>
       </div>      <div class = "entry">
         <figure><img src="images/prague.jpg" alt="prague" />
-              <figcaption> Prague, Czech Republic: Astronomical Clock Tower </figcaption>
+              <figcaption> Prague, Czech Republic: Beautiful view of Prague </figcaption>
         </figure>
       </div>
     </div>      
