--- a/option1.html
+++ b/option1.html
@@ -66,6 +66,15 @@
           padding-left: 0px;
           font-family:'Courier New', Courier, monospace
       }
+      .footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          background-color: burlywood;
+          color: Gray;
+          text-align: center;
+      }
    
     </style>
     <script>          
@@ -160,6 +169,9 @@
         <figure><img src="images/prague.jpg" alt="prague" />
               <figcaption> Prague, Czech Republic: Beautiful view of Prague </figcaption>
         </figure>
+      </div>
+      <div class="footer">
+        <p> Photos are taken by Hyerin Mun & This Webpage is created by Hyerin Mun as well!</p>
       </div>
     </div>      
   </body>
