Font size change of figcaption

--- a/option1.html
+++ b/option1.html
@@ -64,7 +64,8 @@
       }
       figcaption{
           padding-left: 0px;
-          font-family:'Courier New', Courier, monospace
+          font-family:'Courier New', Courier, monospace;
+          font-size: 10px;
       }
       .footer {
           position: fixed;
