scale of bottom change

--- a/option1.html
+++ b/option1.html
@@ -48,6 +48,7 @@
           float:left;
           margin:10px;
           height: 300px;
+          bottom: 50px;
       }
       figure{
           display: block;
@@ -73,7 +74,7 @@
           bottom: 0;
           width: 100%;
           background-color: burlywood;
-          color: Gray;
+          color: whitesmoke;
           text-align: center;
       }
    
