change scale of bottom

--- a/option1.html
+++ b/option1.html
@@ -48,7 +48,7 @@
           float:left;
           margin:10px;
           height: 300px;
-          bottom: 50px;
+          bottom: 30%;
       }
       figure{
           display: block;
@@ -66,7 +66,7 @@
       figcaption{
           padding-left: 0px;
           font-family:'Courier New', Courier, monospace;
-          font-size: 10px;
+          font-size: 15px;
       }
       .footer {
           position: fixed;
