--- a/option1.html
+++ b/option1.html
@@ -68,6 +68,12 @@
           font-family:'Courier New', Courier, monospace;
           font-size: 15px;
       }
+      footer {
+          background-color: #777;
+          padding: 10px;
+          text-align: center;
+          color: white;
+      }
 
    
     </style>
