--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -4,12 +4,30 @@
         <!-- Title of tab-->    
         <title> Shark Spotter </title>
         <style type="text/css">
-        
-        
-        </style>
-</head>
-<body>
+            .map {
+                height: 80%;
+                width: 80%;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            html,
+            body {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                background-color: #FFEBCD;
+            }
+            h1 {
+                text-align: center;
+                font-size: 40px;
+                font-family: 'Courier New', Courier, monospace;
+            }
+        </style>    
+    </head>
+    <body>
     <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
-</body>
+    <div class= "map">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
+    </div>
+    </body>
 </html>
