--- a/option1.html
+++ b/option1.html
@@ -28,6 +28,7 @@
         text-align: center;
         font-size: 40px;
         font-family: 'Courier New', Courier, monospace;
+        color: #B5927F; 
       }
       h4 {
         text-align: center;
