--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -21,6 +21,8 @@
                 text-align: center;
                 font-size: 40px;
                 font-family: 'Courier New', Courier, monospace;
+                color: #B5927F; 
+                
             }
         </style>    
     </head>
