--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -4,11 +4,20 @@
         <!-- Title of tab-->    
         <title> Shark Spotter </title>
         <style type="text/css">
-            .map {
-                height: 80%;
-                width: 80%;
-                margin-left: auto;
-                margin-right: auto;
+            h1 {
+                text-align: center;
+                font-size: 40px;
+                font-family: 'Courier New', Courier, monospace;
+                color: #B5927F; 
+                
+            }
+            .content {
+                float: left;
+                width: 40%;
+                padding: 2px;
+                margin-top: 15px;
+                margin-bottom: 15px;
+                margin-left: 25px;
             }
             html,
             body {
@@ -17,19 +26,22 @@
                 padding: 0;
                 background-color: #FFEBCD;
             }
-            h1 {
-                text-align: center;
-                font-size: 40px;
-                font-family: 'Courier New', Courier, monospace;
-                color: #B5927F; 
-                
-            }
+
         </style>    
     </head>
     <body>
-    <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
-    <div class= "map">
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
-    </div>
+        <div class="content">
+            <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
+
+            <p>
+                This map shows the location of Shark Spotters along the False Bay coastline in South Africa, 
+                as well as all reported white shark sightings between September 8, 2012, 
+                and February 22, 2013. Shark Spotters are positioned at strategic points along 
+                the Cape Peninsula. A spotter is placed on the mountain with polarised sunglasses and binoculars. 
+                This spotter is in radio contact with another spotter on the beach. 
+                If a shark is seen along the beach, the spotter sounds a siren and raises a specific color-coded flag, upon which swimmers are requested to leave the water.
+            </p>
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
+        </div>
     </body>
 </html>
