--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -5,15 +5,21 @@
         <title> Shark Spotter </title>
         <style type="text/css">
             h1 {
-                text-align: center;
+
                 font-size: 40px;
                 font-family: 'Courier New', Courier, monospace;
                 color: #B5927F; 
                 
             }
+            p{
+
+                font-size: 25px;
+                font-family: 'Courier New', Courier, monospace;
+                color: #B5927F;
+            }
             .content {
                 float: left;
-                width: 40%;
+                width: 70%;
                 padding: 2px;
                 margin-top: 15px;
                 margin-bottom: 15px;
