--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -5,25 +5,29 @@
         <title> Shark Spotter </title>
         <style type="text/css">
             h1 {
-
                 font-size: 40px;
                 font-family: 'Courier New', Courier, monospace;
                 color: #B5927F; 
-                
+                background: palegoldenrod;    
+            }
+            .column {
+                float: left;
+                width: 50%;
+                padding: 10px;
+                height: 300px; /* Should be removed. Only for demonstration */
+            }
+
+            /* Clear floats after the columns */
+            .row:after {
+                content: "";
+                display: table;
+                clear: both;
             }
             p{
 
-                font-size: 25px;
+                font-size: 15px;
                 font-family: 'Courier New', Courier, monospace;
                 color: #B5927F;
-            }
-            .content {
-                float: left;
-                width: 70%;
-                padding: 2px;
-                margin-top: 15px;
-                margin-bottom: 15px;
-                margin-left: 25px;
             }
             html,
             body {
@@ -36,18 +40,20 @@
         </style>    
     </head>
     <body>
-        <div class="content">
-            <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
-
-            <p>
-                This map shows the location of Shark Spotters along the False Bay coastline in South Africa, 
+        <h1> Shark Spotter along the False Bay coastline in South Africa </h1>
+        <div class="row">
+            <div class="column" style="background-color:#aaa;">
+              <p>This map shows the location of Shark Spotters along the False Bay coastline in South Africa, 
                 as well as all reported white shark sightings between September 8, 2012, 
                 and February 22, 2013. Shark Spotters are positioned at strategic points along 
                 the Cape Peninsula. A spotter is placed on the mountain with polarised sunglasses and binoculars. 
                 This spotter is in radio contact with another spotter on the beach. 
-                If a shark is seen along the beach, the spotter sounds a siren and raises a specific color-coded flag, upon which swimmers are requested to leave the water.
-            </p>
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
+                If a shark is seen along the beach, the spotter sounds a siren and raises a specific color-coded flag, upon which swimmers are requested to leave the water.</p>
+            </div>
+            <div class="column" style="background-color:#bbb;">
+              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s3-ZnIjWigbVjRxMgE-bKNc1cDqcHu2V" width="640" height="480"></iframe>
+            </div>
+
         </div>
     </body>
 </html>
